# qfa-api

./: .gitignore  Dockerfile  README.md  example.env  main.py  pyproject.toml  schema.csv
.github/workflows/: build-deploy-prod.yml
classification/: classifier.py  result.py  schema.py
routes/: classify.py  load.py
tests/: test.py
utils/: classification_result.py  classification_schema.py  classifier.py  cosmos.py  espocrm.py  kobo.py  logger.py  sources.py  translate.py
